feat: response mapping of products with its information
