# src/main/resources/swagger.yaml
@@ -50,27 +50,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProductPage'
-    post:
-      operationId: create
-      tags:
-        - products
-      summary: Cria um novo produto
-      description: Cria um novo produto no sistema
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreateProductRequest'
-      responses:
-        '201':
-          description: Produto criado com sucesso
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductResponse'
-        '400':
-          description: Dados inválidos fornecidos
 
   /stores:
     get:
@@ -163,6 +142,9 @@ components:
         id:
           type: string
           example: p-001
+        sku:
+          type: string
+          example: "550e8400-e29b-41d4-a716-446655440001"
         name:
           type: string
           example: "Camiseta Básica"
@@ -173,12 +155,13 @@ components:
           type: number
           format: double
           example: 59.90
-        category:
-          type: string
-          example: "Vestuário"
-        quantity:
+        totalQuantity:
           type: integer
           example: 100
+        stocks:
+          type: object
+          items:
+            $ref: "#/components/schemas/StockInformationResponse"
 
     ProductPage:
       type: object
@@ -208,6 +191,19 @@ components:
         last:
           type: boolean
           example: false
+
+    StockInformationResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          example: "550e8400-e29b-41d4-a716-446655440001"
+        quantity:
+          type: integer
+        store:
+          type: object
+          $ref: '#/components/schemas/StoreResponse'
+
     StoreResponse:
       type: object
       properties:
@@ -276,9 +272,6 @@ components:
         availableQuantity:
           type: integer
           example: 45
-        minimumStock:
-          type: integer
-          example: 10
         isLowStock:
           type: boolean
           example: false
